[gd_scene load_steps=18 format=2]

[ext_resource path="res://code/vn/Item_Finder.gd" type="Script" id=2]
[ext_resource path="res://code/vn/Main.gd" type="Script" id=3]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/SpritesVN/Катя.png" type="Texture" id=5]
[ext_resource path="res://Sprites/StaticSprites/wallet.png" type="Texture" id=6]
[ext_resource path="res://Sprites/SpritesVN/construct/Женя/body_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/SpritesVN/construct/Женя/eye_patch.png" type="Texture" id=8]
[ext_resource path="res://Sprites/SpritesVN/construct/Женя/face_astonishment.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Backgrounds/Класс_утро.png" type="Texture" id=10]
[ext_resource path="res://code/vn/Item.gd" type="Script" id=11]
[ext_resource path="res://shaders/outline_shader.tres" type="Shader" id=12]

[sub_resource type="GDScript" id=9]
script/source = "extends Node2D

var Interact = [
{
	\"Name\" : \"Катя\",
	\"Text\": \"Ох, привет\"
},
{
	\"Name\" : \"Катя\",
	\"Text\": \"Неожидала тебя тут увидеть. Тебя ко мне Женя прислала?\"
},
{
	\"Name\" : \"Женя\",
	\"Text\": \"Смари как могу\"
},
{
	\"Name\" : \"Женя\",
	\"Text\": \"Ну как?\",
	\"Emotion\": [\"EyePatch off\", \"face smile\",\"hair simple\"]
},
{
	\"Name\" : \"Женя\",
	\"Text\": \"Ладно, шучу\",
},
{
	\"Name\" : \"ГГтян\",
	\"Text\": \"Угу, она зачем-то про ключ говорила. Что это за ключ?\"
},
{
	\"Name\" : \"Женя\",
	\"Text\": \"Ладно, шучу\",
},
{
	\"Name\" : \"Катя\",
	\"Text\": \"А, это ключ от той большой двери. Ты разве не знала?\"
},
{
	\"Name\" : \"ГГтян\",
	\"Text\": \"Нет, не знала\"	
},
{
	\"Name\": \"Катя\",
	\"Text\": \"Ну вот теперь знаешь. В любом случае, я потеряла кошелек. Поможешь его найти?\",
	\"Choice\": [\"Да\",\"Нет\",\"Знаешь, мы можем решить это дипломатически.\"],
	\"Slot\": [\"afterChoise1\",\"afterChoise2\",\"afterChoise3\"]
}
]
var afterChoise1 = [
{
	\"Name\" : \"Катя\",
	\"Text\": \"Отлично!\"
},
{
	\"Name\" : \"Катя\",
	\"Text\": \"Отлично\"
},
{
	\"Name\" : \"\",
	\"Text\": \"\",
	\"SearchPhase\": \"\"
},
{
	\"Name\" : \"Катя\",
	\"Text\": \"Пасиба!\"
},
{
	\"Name\": \"\",
	\"Text\": \"\",
	\"End\": \"res://scenes/Corridor.tscn\"
}
]

var afterChoise2 = [
{
	\"Name\" : \"Катя\",
	\"Text\": \"Херовый из тебя помошник\"
},
{
	\"Name\" : \"Катя\",
	\"Text\": \"Херовый из тебя помошник\"
},
{
	\"Name\" : \"Катя\",
	\"Text\": \"Херовый из тебя помошник\"
},
{
	\"Name\": \"\",
	\"Text\": \"\",
	\"End\": \"res://scenes/Corridor.tscn\"
}
]

var afterChoise3 = [
{
	\"Name\" : \"Катя\",
	\"Text\": \"Ладно.\"
},
{
	\"Name\": \"\",
	\"Text\": \"\",
	\"End\": \"\"
}
]
"

[sub_resource type="DynamicFont" id=1]
size = 80
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 200
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 12 )
shader_param/width = 0.018

[node name="scene" type="Node2D"]

[node name="dialogue" type="Node2D" parent="."]
script = SubResource( 9 )

[node name="Control" type="Control" parent="."]
visible = false
show_behind_parent = true
margin_left = 108.0
margin_top = 436.0
margin_right = 148.0
margin_bottom = 476.0
rect_scale = Vector2( 0.3, 0.3 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="ColorRect" parent="Control"]
margin_left = 26.667
margin_top = 1226.67
margin_right = 4026.67
margin_bottom = 1726.67
rect_scale = Vector2( 1.4, 1.53333 )
color = Color( 0, 0, 0, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/TextBox"]
margin_left = 43.0
margin_top = 30.0
margin_right = 386.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/TextBox"]
wait_time = 0.022

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBox"]
margin_left = 400.0
margin_top = 40.0
margin_right = 3562.0
margin_bottom = 437.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Position2D" parent="Control"]
position = Vector2( 1053.33, -433.333 )
scale = Vector2( 3.33333, 3.33333 )

[node name="right" type="Position2D" parent="Control"]
position = Vector2( 2160, -433.333 )
scale = Vector2( 3.33333, 3.33333 )

[node name="Char" type="Sprite" parent="Control"]
visible = false
position = Vector2( 1013.33, 690 )
scale = Vector2( 1.5, 1.5 )
z_index = -1
texture = ExtResource( 5 )

[node name="Женя" type="Node2D" parent="Control"]
visible = false
position = Vector2( 2145.33, 416.667 )
scale = Vector2( 2.16667, 2.16667 )
z_index = -1

[node name="Body1" type="Sprite" parent="Control/Женя"]
texture = ExtResource( 7 )

[node name="Face" type="Sprite" parent="Control/Женя"]
texture = ExtResource( 9 )

[node name="EyePatch" type="Sprite" parent="Control/Женя"]
texture = ExtResource( 8 )

[node name="Hair" type="Sprite" parent="Control/Женя"]

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
visible = false
margin_left = 423.0
margin_top = -1240.0
margin_right = 5280.0
margin_bottom = 1657.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control/ScrollContainer"]

[node name="ColorRect" type="ColorRect" parent="Control/ScrollContainer/Control"]
margin_left = 580.333
margin_top = -6.66667
margin_right = 4253.33
margin_bottom = 2890.33
color = Color( 0, 0, 0, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/ScrollContainer/Control"]
margin_left = 777.0
margin_top = 157.0
margin_right = 4127.0
margin_bottom = 2700.0
custom_fonts/normal_font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backlog" type="Button" parent="Control"]
margin_left = 5083.0
margin_top = 1273.0
margin_right = 5603.0
margin_bottom = 1510.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
action_mode = 0
enabled_focus_mode = 0
text = "backlog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
position = Vector2( 958, 539 )
scale = Vector2( 1.50156, 1.49861 )
z_index = -10
z_as_relative = false
texture = ExtResource( 10 )

[node name="Items" type="StaticBody2D" parent="."]
position = Vector2( 50, 5 )
z_index = 2
input_pickable = true
script = ExtResource( 2 )

[node name="wallet" type="TextureButton" parent="Items"]
material = SubResource( 8 )
use_parent_material = true
margin_left = 1099.0
margin_top = 532.0
margin_right = 1611.0
margin_bottom = 1044.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 6 )
script = ExtResource( 11 )

[node name="option_list" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1249.0
margin_top = 720.0
margin_right = 1789.0
margin_bottom = 768.0
grow_vertical = 0

[connection signal="timeout" from="Control/TextBox/Timer" to="Control" method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/backlog" to="Control" method="_on_backlog_pressed"]
